[project]
name = "defimoney-discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hikari>=2.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
    "rich>=13.9.2",
    "web3>=7.3.0",
]
